# 5element-test-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f62ed425b8a3_initial_users_chats_messages.py
config/: llm.yaml  llm.yaml.example
src/backend/: main.py
src/backend/api/: router.py
src/backend/api/routes/: auth.py  chats.py  messages.py  models.py  tools.py
src/backend/core/: config.py  database.py  security.py
src/backend/models/: __init__.py  chat.py  message.py  user.py
src/backend/repositories/: __init__.py  chat_repository.py  message_repository.py  user_repository.py
src/backend/schemas/: __init__.py  auth.py  chat.py  message.py  model.py  tool.py
src/backend/services/llm/: __init__.py  base.py  factory.py  ollama.py  openai.py
src/backend/services/llm/tools/: __init__.py  base.py  builtin.py  runner.py
tests/: conftest.py  test_auth.py  test_chats.py  test_llm_providers.py  test_messages.py  test_models_and_tools.py
