[project]
name = "market-manager-backend"
version = "0.0.1"
description = "API Market Manager"
authors = [
    { name = "firstConsole",email = "artamonov008@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
fastapi = "0.139.0"
uvicorn = {extras = ["standard"], version = "0.51.0"}
pydantic = "2.13.4"
pydantic-settings = "2.14.2"
sqlalchemy = "2.0.51"
aiosqlite = "0.22.1"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
httpx = "0.28.1"
pyyaml = "6.0.3"
python-multipart = "0.0.32"
alembic = "1.18.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
